RESOLVED FIXED288429
Null pointer dereference in `ResourceLoader::ResourceLoader`
https://bugs.webkit.org/show_bug.cgi?id=288429
Summary Null pointer dereference in `ResourceLoader::ResourceLoader`
Charlie Wolfe
Reported 2025-02-24 16:59:43 PST
...
Attachments
Charlie Wolfe
Comment 1 2025-02-24 16:59:44 PST
Charlie Wolfe
Comment 2 2025-02-24 17:00:17 PST
EWS
Comment 3 2025-02-24 18:29:48 PST
Committed 291002@main (5a12c77c8686): <https://commits.webkit.org/291002@main> Reviewed commits have been landed. Closing PR #41255 and removing active labels.
EWS
Comment 4 2025-03-04 14:58:47 PST
Committed 289651.216@safari-7621-branch (e9b964528b6f): <https://commits.webkit.org/289651.216@safari-7621-branch> Reviewed commits have been landed. Closing PR #2725 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.