Null pointer dereference in `ResourceLoader::ResourceLoader` https://bugs.webkit.org/show_bug.cgi?id=288429 rdar://80832481

Reviewed by Pascoe.

Crash logs indicate page can be null.

* Source/WebCore/loader/ResourceLoader.cpp:

Canonical link: https://commits.webkit.org/291002@main